# encode_ldpc

./: .gitmodules  CMakeLists.txt  GF2.hpp  functions.h  ldpc.cpp  matrix_data.txt  tests.cpp
